Fix button alignment and remove hover funcitonality from the downloadf options link

--- a/ds_judgements_public_ui/sass/includes/_mixins.scss
+++ b/ds_judgements_public_ui/sass/includes/_mixins.scss
@@ -61,6 +61,7 @@
 @mixin call-to-action-button-secondary {
   @include call-to-action-button;
   background-color: transparent;
+  padding: 0.875rem 1.175rem;
   color: $color__cta-background !important;
   border: 2px solid $color__cta-background;
 }
